bugfix: setting z-index of SVGStrokeAnimation behind rest of page

--- a/src/components/SVGStrokeAnimation.scss
+++ b/src/components/SVGStrokeAnimation.scss
@@ -1,4 +1,5 @@
 .SVGStrokeAnimation {
+  z-index: -1;
 
   svg {
     position: absolute;
